--- a/docker-compose.prod-no-init.yml
+++ b/docker-compose.prod-no-init.yml
@@ -3,8 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: planka-producao-desenvolvimento
-    pull_policy: never
+    image: ghcr.io/andrebids/boards:latest
     restart: on-failure
     volumes:
       - favicons:/app/public/favicons
