--- a/package.json
+++ b/package.json
@@ -1,7 +1,22 @@
 {
-  "name": "planka",
-  "version": "2.0.0-rc.3",
-  "private": true,
+  "name": "@andrebids/planka",
+  "version": "2.0.0-rc.4",
+  "private": false,
+  "description": "Planka personalizado com funcionalidades avançadas para gestão de projetos",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/andrebids/boards.git"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
+  "keywords": [
+    "planka",
+    "kanban",
+    "project-management",
+    "boards",
+    "task-management"
+  ],
   "scripts": {
     "client:build": "npm run build --prefix client",
     "client:lint": "npm run lint --prefix client",
