Forçar nova execução do workflow com permissões corretas para ghcr.io

--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -1,5 +1,6 @@
 name: Build and Push Docker Image to GitHub Container Registry
 
+# Workflow atualizado com permissões corretas para ghcr.io
 on:
   push:
     branches: [ main ]
