--- a/docker-compose.prod-no-init.yml
+++ b/docker-compose.prod-no-init.yml
@@ -14,13 +14,10 @@ services:
       - 3001:1337
     environment:
       - BASE_URL=${PLANKA_BASE_URL:-http://localhost:3001}
-      - DATABASE_URL=postgresql://postgres@postgres/planka
+      - DATABASE_URL=postgresql://postgres@boards-postgres/planka
       - SECRET_KEY=notsecretkey
       - DEFAULT_ADMIN_EMAIL=admin@example.com
       - DEFAULT_ADMIN_PASSWORD=admin123
-    depends_on:
-      postgres:
-        condition: service_healthy
     command: >
       sh -c "
         echo 'Aguardando PostgreSQL...' &&
@@ -29,25 +26,15 @@ services:
         echo 'Iniciando Planka...' &&
         npm run start:prod
       "
-
-  postgres:
-    image: postgres:15-alpine
-    restart: on-failure
-    volumes:
-      - postgres:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_DB=planka
-      - POSTGRES_USER=postgres
-      - POSTGRES_HOST_AUTH_METHOD=trust
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+    networks:
+      - planka-personalizado_default
 
 volumes:
   favicons:
   user-avatars:
   background-images:
   attachments:
-  postgres:
+
+networks:
+  planka-personalizado_default:
+    external: true
