--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -8,6 +8,11 @@ services:
     container_name: boards-server
     command: [ "bash", "-c", "npm install && npm run db:init && npm start" ]
     restart: on-failure
+    dns:
+      - 8.8.8.8
+      - 1.1.1.1
+    extra_hosts:
+      - "smtp.bids.pt:127.0.0.1"
     volumes:
       - ./server:/app
     ports:
