fix: Corrigir workflows GitHub Actions para build automático da versão 1.3.0

--- a/.github/workflows/build-and-publish-release-package.yml
+++ b/.github/workflows/build-and-publish-release-package.yml
@@ -38,8 +38,8 @@ jobs:
           cp ../dist/public/index.html ../dist/views
         working-directory: ./client
 
-      - name: Include LICENSE.md, README.md, SECURITY.md into dist
-        run: mv LICENSE.md README.md SECURITY.md dist
+      - name: Include README.md, SECURITY.md into dist
+        run: mv README.md SECURITY.md dist
 
       - name: Create release package
         run: |
