--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
       - DEFAULT_ADMIN_EMAIL=admin@example.com
       - DEFAULT_ADMIN_PASSWORD=admin123
       - EMAIL_TEMPLATES_ENABLED=true
+      - NODE_OPTIONS=--no-experimental-fetch
+      - UNDICI_NO_FILE_API=1
     depends_on:
       postgres:
         condition: service_healthy
