--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,7 +6,7 @@ services:
     image: planka-dev-video-test
     pull_policy: never
     container_name: boards-server
-    command: [ "bash", "-c", "npm install && npm run db:init && npm start" ]
+    command: [ "bash", "-c", "npm install && npm rebuild bcrypt lodepng --build-from-source --force && npm run db:init && npm start" ]
     restart: on-failure
     dns:
       - 8.8.8.8
@@ -27,6 +27,7 @@ services:
       - DEFAULT_ADMIN_PASSWORD=admin123
       - DEFAULT_ADMIN_NAME=Admin User
       - DEFAULT_ADMIN_USERNAME=admin
+      - GLOBAL_NOTIFICATION_SERVICES=[{"url":"mailto://boards%40bids.pt:U31dc6FeXqSUVE@mail.bids.pt:587/?from=boards%40bids.pt&to=andre%40bids.pt","format":"html"}]
     depends_on:
       postgres:
         condition: service_healthy
