--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "gv": "npm i --package-lock-only --ignore-scripts && genversion --source . --template server/version-template.ejs server/version.js && genversion --source . --template client/version-template.ejs client/src/version.js",
     "postinstall": "npm i --prefix server && npm i --prefix client",
     "lint": "npm run server:lint && npm run client:lint",
-    "prepare": "husky",
     "server:console": "npm run console --prefix server",
     "server:db:create-admin-user": "npm run db:create-admin-user --prefix server",
     "server:db:init": "npm run db:init --prefix server",
@@ -25,19 +24,9 @@
     "start": "concurrently -n server,client \"npm run server:start\" \"npm run client:start\"",
     "test": "npm run server:test && npm run client:test"
   },
-  "lint-staged": {
-    "client/src/**/*.{js,jsx}": [
-      "npm run client:lint"
-    ],
-    "server/**/*.js": [
-      "npm run lint"
-    ]
-  },
   "dependencies": {
     "@playwright/test": "^1.55.0",
     "concurrently": "^8.2.2",
-    "genversion": "^3.2.0",
-    "husky": "^9.1.7",
-    "lint-staged": "^15.5.2"
+    "genversion": "^3.2.0"
   }
 }
